<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_272E3B"
    tools:ignore="MissingDefaultResource">

    <EditText
        android:id="@+id/live_url_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/color_000000_30"
        android:gravity="center_vertical|start"
        android:hint="@string/please_enter_url"
        android:importantForAutofill="no"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/color_86909C"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <RadioGroup
        android:id="@+id/screen_orientation_rg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/live_url_et">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/screen_orientation_landscape_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/ic_screen_landscape_selector"
            android:drawablePadding="10dp"
            android:gravity="center_horizontal"
            android:text="@string/landscape_mode"
            android:textColor="@color/color_screen_orientation_selector"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/screen_orientation_portrait_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/ic_screen_portrait_selector"
            android:drawablePadding="10dp"
            android:gravity="center_horizontal"
            android:text="@string/portrait_mode"
            android:textColor="@color/color_screen_orientation_selector"
            android:textSize="16sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/trigger_live_share_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_create_share"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/live_together"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen_orientation_rg" />

</androidx.constraintlayout.widget.ConstraintLayout>