<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F20E0825">

    <TextView
        android:id="@+id/voice_dodge_tv"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/audio_ducking"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/voice_dodge_switch"
        style="@style/SwitchLg"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@id/voice_dodge_tv"
        app:layout_constraintLeft_toRightOf="@id/voice_dodge_tv"
        app:layout_constraintTop_toTopOf="@id/voice_dodge_tv"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <FrameLayout
        android:id="@+id/song_volume_layout"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        app:layout_constraintTop_toBottomOf="@id/voice_dodge_switch">

        <TextView
            android:id="@+id/video_volume_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/video_volume"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/video_volume_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="0" />

        <SeekBar
            android:id="@+id/video_volume_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="6dp"
            android:progressDrawable="@drawable/voice_volume_seekbar_drawable"
            android:thumb="@drawable/voice_volume_seekbar_thumb" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/user_volume_layout"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/song_volume_layout">

        <TextView
            android:id="@+id/user_volume_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/audio_volume"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/user_volume_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="0" />

        <SeekBar
            android:id="@+id/user_volume_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="6dp"
            android:progressDrawable="@drawable/voice_volume_seekbar_drawable"
            android:thumb="@drawable/voice_volume_seekbar_thumb" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>